# gyro_optimizer

./: README.md  pyproject.toml
examples/: benchmark_vision.py  requirements.txt  synthetic_benchmark.py  telemetry_example.py  transformer_benchmark.py  visual_benchmark.py
gyro/: __init__.py  clifford_adam.py  clifford_sgd.py  gyro_adam.py  gyro_sgd.py
